--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "ts-node": "^10.9.2",
     "typescript": "5.5.3"
   },
-  "name": "olas-operate-app",
+  "name": "pearl-superfest",
   "private": true,
   "scripts": {
     "dev": "next dev",
