--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "olas-operate-middleware"
-version = "0.1.0-rc71"
+name = "pearl-superfest-middleware"
+version = "0.1.0-rc1"
 description = ""
 authors = ["David Vilela <dvilelaf@gmail.com>", "Viraj Patel <vptl185@gmail.com>"]
 readme = "README.md"
