--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "prettier": "^3.2.5"
   },
   "main": "electron/main.js",
-  "name": "olas-operate-app",
+  "name": "pearl-superfest",
   "productName": "Pearl",
   "description": "An all-in-one application designed to streamline your entry into the world of autonomous agents and earning OLAS through staking.",
   "scripts": {
@@ -56,5 +56,5 @@
     "start:frontend": "cd frontend && yarn start",
     "test:frontend": "cd frontend && yarn test"
   },
-  "version": "0.1.0-rc71"
+  "version": "0.1.0-rc1"
 }
